--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CourseHub - منصتك للدورات والشهادات</title>
+    <title>CourseHub - منصتك للتعلم</title>
     <style>
         /* --- Reset بسيط --- */
         * {
@@ -22,16 +22,21 @@
         header {
             background-color: #0056d2;
             color: white;
-            padding: 15px 20px;
+            padding: 10px 20px;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
         }
 
-        header .logo {
-            font-size: 24px;
+        header .top-bar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .logo {
+            font-size: 26px;
             font-weight: bold;
-        }
-
-        nav {
-            margin-top: 10px;
         }
 
         nav a {
@@ -43,6 +48,31 @@
 
         nav a:hover {
             text-decoration: underline;
+        }
+
+        .search-bar {
+            display: flex;
+        }
+
+        .search-bar input {
+            padding: 7px;
+            border-radius: 5px 0 0 5px;
+            border: none;
+            width: 200px;
+        }
+
+        .search-bar button {
+            padding: 7px 12px;
+            border: none;
+            background-color: #ff9900;
+            color: white;
+            font-weight: bold;
+            border-radius: 0 5px 5px 0;
+            cursor: pointer;
+        }
+
+        .search-bar button:hover {
+            background-color: #e68a00;
         }
 
         .hero {
@@ -58,12 +88,12 @@
 
         .hero h1 {
             font-size: 48px;
-            margin-bottom: 20px;
+            margin-bottom: 15px;
         }
 
         .hero p {
             font-size: 20px;
-            margin-bottom: 30px;
+            margin-bottom: 25px;
         }
 
         .btn {
@@ -90,7 +120,31 @@
             color: #0056d2;
         }
 
-        .courses, .certificates, .tests {
+        .categories {
+            display: flex;
+            justify-content: center;
+            gap: 15px;
+            flex-wrap: wrap;
+            margin-bottom: 40px;
+        }
+
+        .categories button {
+            padding: 10px 20px;
+            border: 1px solid #0056d2;
+            background: white;
+            color: #0056d2;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+            transition: all 0.3s;
+        }
+
+        .categories button:hover, .categories button.active {
+            background-color: #0056d2;
+            color: white;
+        }
+
+        .courses-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 20px;
@@ -98,28 +152,31 @@
 
         .card {
             background: white;
-            padding: 20px;
             border-radius: 8px;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            transition: transform 0.3s;
+            transition: transform 0.3s, box-shadow 0.3s;
         }
 
         .card:hover {
             transform: translateY(-5px);
+            box-shadow: 0 6px 15px rgba(0,0,0,0.2);
         }
 
         .card img {
             width: 100%;
-            border-radius: 5px;
-            margin-bottom: 15px;
+            border-radius: 8px 8px 0 0;
         }
 
-        .card h3 {
+        .card-content {
+            padding: 15px;
+        }
+
+        .card-content h3 {
             margin-bottom: 10px;
             color: #333;
         }
 
-        .card p {
+        .card-content p {
             margin-bottom: 15px;
             color: #555;
         }
@@ -140,82 +197,160 @@
         footer a:hover {
             text-decoration: underline;
         }
+
+        /* صفحة دورة واحدة */
+        .course-detail {
+            max-width: 800px;
+            margin: 0 auto;
+            background: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+
+        .course-detail h2 {
+            color: #0056d2;
+            margin-bottom: 15px;
+        }
+
+        .course-detail img {
+            width: 100%;
+            border-radius: 8px;
+            margin-bottom: 20px;
+        }
+
+        .course-detail p {
+            margin-bottom: 15px;
+            line-height: 1.8;
+        }
+
     </style>
 </head>
 <body>
 
+    <!-- Header -->
     <header>
-        <div class="logo">CourseHub</div>
-        <nav>
-            <a href="#courses">الدورات</a>
-            <a href="#certificates">الشهادات</a>
-            <a href="#tests">الاختبارات</a>
-            <a href="#contact">تواصل معنا</a>
-        </nav>
+        <div class="top-bar">
+            <div class="logo">CourseHub</div>
+            <nav>
+                <a href="#courses">الدورات</a>
+                <a href="#certificates">الشهادات</a>
+                <a href="#tests">الاختبارات</a>
+                <a href="#contact">تواصل معنا</a>
+            </nav>
+        </div>
+        <div class="search-bar" style="margin-top:10px; justify-content:center;">
+            <input type="text" placeholder="ابحث عن دورة...">
+            <button>بحث</button>
+        </div>
     </header>
 
+    <!-- Hero -->
     <div class="hero">
-        <h1>تعلم من أفضل الخبراء</h1>
-        <p>دورات، شهادات، واختبارات تساعدك على تطوير مهاراتك</p>
+        <h1>تعلم من خبراء عالميين</h1>
+        <p>اختر دورات، اجتاز الاختبارات، واحصل على شهادات معتمدة</p>
         <a href="#courses" class="btn">ابدأ التعلم الآن</a>
     </div>
 
+    <!-- Categories -->
+    <section>
+        <h2>فئات الدورات</h2>
+        <div class="categories">
+            <button class="active">كل الدورات</button>
+            <button>تطوير الويب</button>
+            <button>تصميم الجرافيك</button>
+            <button>تحليل البيانات</button>
+            <button>التسويق</button>
+            <button>البرمجة</button>
+        </div>
+    </section>
+
+    <!-- Courses -->
     <section id="courses">
-        <h2>دوراتنا</h2>
-        <div class="courses">
+        <h2>الدورات المميزة</h2>
+        <div class="courses-grid">
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1581090700227-0c22c9baf0c7?auto=format&fit=crop&w=400&q=80" alt="Course 1">
-                <h3>تطوير الويب</h3>
-                <p>تعلم HTML, CSS, JavaScript لبناء مواقع حديثة.</p>
-                <a href="#" class="btn">اشترك الآن</a>
+                <img src="https://images.unsplash.com/photo-1581090700227-0c22c9baf0c7?auto=format&fit=crop&w=400&q=80" alt="تطوير الويب">
+                <div class="card-content">
+                    <h3>تطوير الويب</h3>
+                    <p>تعلم HTML, CSS, JavaScript لبناء مواقع حديثة.</p>
+                    <a href="#course1" class="btn">عرض الدورة</a>
+                </div>
             </div>
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1581090700227-0c22c9baf0c7?auto=format&fit=crop&w=400&q=80" alt="Course 2">
-                <h3>تصميم الجرافيك</h3>
-                <p>تعلم استخدام أدوات التصميم لإنشاء تصاميم رائعة.</p>
-                <a href="#" class="btn">اشترك الآن</a>
+                <img src="https://images.unsplash.com/photo-1537432376769-00a4ef2e22b0?auto=format&fit=crop&w=400&q=80" alt="تصميم الجرافيك">
+                <div class="card-content">
+                    <h3>تصميم الجرافيك</h3>
+                    <p>تعلم استخدام أدوات التصميم لإنشاء تصاميم رائعة.</p>
+                    <a href="#course2" class="btn">عرض الدورة</a>
+                </div>
             </div>
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1581090700227-0c22c9baf0c7?auto=format&fit=crop&w=400&q=80" alt="Course 3">
-                <h3>تحليل البيانات</h3>
-                <p>تعلم التعامل مع البيانات وتحليلها لاتخاذ قرارات أفضل.</p>
-                <a href="#" class="btn">اشترك الآن</a>
+                <img src="https://images.unsplash.com/photo-1581090700227-0c22c9baf0c7?auto=format&fit=crop&w=400&q=80" alt="تحليل البيانات">
+                <div class="card-content">
+                    <h3>تحليل البيانات</h3>
+                    <p>تعلم التعامل مع البيانات وتحليلها لاتخاذ قرارات أفضل.</p>
+                    <a href="#course3" class="btn">عرض الدورة</a>
+                </div>
             </div>
         </div>
     </section>
 
+    <!-- Certificates -->
     <section id="certificates">
         <h2>الشهادات</h2>
-        <div class="certificates">
+        <div class="courses-grid">
             <div class="card">
-                <h3>شهادة إتمام دورة تطوير الويب</h3>
-                <p>شهادة معتمدة تساعدك على إثبات مهاراتك أمام الشركات.</p>
-                <a href="#" class="btn">احصل عليها</a>
+                <div class="card-content">
+                    <h3>شهادة تطوير الويب</h3>
+                    <p>شهادة معتمدة لإثبات مهاراتك أمام الشركات والعملاء.</p>
+                    <a href="#" class="btn">احصل عليها</a>
+                </div>
             </div>
             <div class="card">
-                <h3>شهادة تصميم الجرافيك</h3>
-                <p>اعرض مهاراتك الإبداعية للشركات والعملاء.</p>
-                <a href="#" class="btn">احصل عليها</a>
+                <div class="card-content">
+                    <h3>شهادة تصميم الجرافيك</h3>
+                    <p>اعرض مهاراتك الإبداعية للشركات والعملاء.</p>
+                    <a href="#" class="btn">احصل عليها</a>
+                </div>
             </div>
         </div>
     </section>
 
+    <!-- Tests -->
     <section id="tests">
         <h2>الاختبارات</h2>
-        <div class="tests">
+        <div class="courses-grid">
             <div class="card">
-                <h3>اختبار HTML & CSS</h3>
-                <p>اختبر مهاراتك في أساسيات تصميم المواقع.</p>
-                <a href="#" class="btn">ابدأ الاختبار</a>
+                <div class="card-content">
+                    <h3>اختبار HTML & CSS</h3>
+                    <p>اختبر مهاراتك في أساسيات تصميم المواقع.</p>
+                    <a href="#" class="btn">ابدأ الاختبار</a>
+                </div>
             </div>
             <div class="card">
-                <h3>اختبار تحليل البيانات</h3>
-                <p>تحقق من قدرتك على تحليل البيانات واتخاذ القرارات.</p>
-                <a href="#" class="btn">ابدأ الاختبار</a>
+                <div class="card-content">
+                    <h3>اختبار تحليل البيانات</h3>
+                    <p>تحقق من قدرتك على تحليل البيانات واتخاذ القرارات.</p>
+                    <a href="#" class="btn">ابدأ الاختبار</a>
+                </div>
             </div>
         </div>
     </section>
 
+    <!-- Course Detail Example -->
+    <section id="course1">
+        <div class="course-detail">
+            <h2>دورة تطوير الويب</h2>
+            <img src="https://images.unsplash.com/photo-1581090700227-0c22c9baf0c7?auto=format&fit=crop&w=800&q=80" alt="Course Detail">
+            <p>في هذه الدورة ستتعلم أساسيات تطوير المواقع من HTML, CSS, وJavaScript لتتمكن من بناء مواقع حديثة ومتجاوبة.</p>
+            <p>الدورة تشمل: دروس فيديو، مشاريع تطبيقية، وتمارين عملية لتقوية مهاراتك.</p>
+            <p>احصل على شهادة معتمدة عند الانتهاء من الدورة لاستخدامها في حياتك المهنية.</p>
+            <a href="#" class="btn">اشترك الآن</a>
+        </div>
+    </section>
+
+    <!-- Footer -->
     <footer id="contact">
         <p>© 2026 CourseHub. جميع الحقوق محفوظة.</p>
         <p>
