--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,26 +3,26 @@ name: Deploy Static Site to GitHub Pages
 on:
   push:
     branches:
-      - main
+      - main   # النشر يحدث عند كل push على الفرع الرئيسي
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. سحب الملفات من الفرع الرئيسي
+      # 1. سحب ملفات المشروع
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. تهيئة GitHub Pages
+      # 2. إعداد GitHub Pages
       - name: Configure GitHub Pages
         uses: actions/configure-pages@v3
 
-      # 3. رفع الملفات المراد نشرها
+      # 3. رفع ملفات الموقع للنشر
       - name: Upload Pages Artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: './'  # كل الملفات في المجلد الرئيسي
+          path: ./   # كل الملفات في المجلد الرئيسي للمشروع
 
       # 4. نشر الملفات على GitHub Pages
       - name: Deploy to GitHub Pages
