--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -3,14 +3,14 @@ name: Deploy Static Site to GitHub Pages
 on:
   push:
     branches:
-      - main  # يتم النشر عند كل push على الفرع الرئيسي
+      - main  # كل push على الفرع الرئيسي ينشر الموقع
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. سحب ملفات المشروع من Git
+      # 1. Checkout المشروع
       - name: Checkout repository
         uses: actions/checkout@v3
 
@@ -18,12 +18,12 @@ jobs:
       - name: Configure GitHub Pages
         uses: actions/configure-pages@v3
 
-      # 3. رفع ملفات الموقع للنشر (artifact)
+      # 3. رفع ملفات الموقع (artifact)
       - name: Upload Pages Artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: ./  # كل ملفات المشروع في root
+          path: ./  # كل الملفات في root
 
-      # 4. نشر الملفات على GitHub Pages
+      # 4. نشر الموقع على GitHub Pages
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v1
